--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
     defaultConfig {
         applicationId "com.tweekerz.ind.virtualspeedo"
         minSdkVersion 16
-        targetSdkVersion 26
-        versionCode 4
-        versionName "1.0.4"
+        targetSdkVersion 27
+        versionCode 5
+        versionName "1.0.5"
     }
     buildTypes {
         release {
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:27.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.anastr:speedviewlib:1.1.6'
-    compile 'com.google.android.gms:play-services-location:12.0.0'
+    compile 'com.github.anastr:speedviewlib:1.2.0'
+    compile 'com.google.android.gms:play-services-location:15.0.1'
+    compile 'com.google.android.gms:play-services-ads:15.0.1'
 }
